# CHAT-CALL

./: .gitignore  README.md
backend/: create_tables.py  main.py  pyproject.toml  requirements.txt  test_service.py
backend/app/: main.py  routes.py  schemas.py
backend/app/core/: database.py
backend/app/models/: chat.py
backend/app/repositories/: chat_repo.py
backend/app/services/: chat_service.py
frontend/: package-lock.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ChatWindow.tsx  MessageInput.tsx
frontend/src/contexts/: ChatContext.tsx
frontend/src/services/: ChatContext.tsx  apiService.ts
