[project]
name = "backend"
version = "0.1.0"
description = "Backend do CHAT-CALL com FastAPI"
authors = [
    {name = "Victor Hugo",email = "vhlcads@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.119.1,<0.120.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
